Fix spacing of components

--- a/src/app/css/ui.css
+++ b/src/app/css/ui.css
@@ -97,7 +97,7 @@ div.circleTitle {
 	background-image: linear-gradient(45deg, var(--gradientmid) 0%, var(--gradientmid) 20%, var(--gradientend) 50%, var(--gradientmid) 80%, var(--gradientmid) 100%);
 }
 .radioDisplay {
-	margin: 5px;
+	margin: 2em 1em 2em 1em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -153,7 +153,6 @@ div.selected::after {
 	width: 20%;
 	background-color: var(--gray);
 	border-radius: 5px;
-	
 }
 
 
